examples/semantics/errors/error6.grace
fun error6 () : nothing
{
	geti(9);
}
